# obs-squeezeback

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  build_and_install.bat  build_release.bat  installer.iss  squeezeback.lua
.github/workflows/: build.yml
data/: squeezeback.effect  squeezeback_filter.effect
data/locale/: en-US.ini
src/: plugin-main.c  squeezeback-dock-bridge.h  squeezeback-dock.cpp  squeezeback-filter.c  squeezeback-filter.h  squeezeback-transition.c  squeezeback-transition.h
